--- a/module3-ridge-regression/LS_DS_213_assignment.ipynb
+++ b/module3-ridge-regression/LS_DS_213_assignment.ipynb
@@ -57,7 +57,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": 1,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -85,7 +85,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 94,
+   "execution_count": 2,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -115,7 +115,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 95,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -126,7 +126,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 96,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -142,7 +142,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 97,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -151,7 +151,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 98,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -161,7 +161,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 99,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -170,7 +170,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 100,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -179,7 +179,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 101,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -578,7 +578,7 @@
        "[3151 rows x 21 columns]"
       ]
      },
-     "execution_count": 101,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -589,7 +589,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 102,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -605,7 +605,7 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 102,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -616,7 +616,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 103,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -646,7 +646,7 @@
        "dtype: object"
       ]
      },
-     "execution_count": 103,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -657,7 +657,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 104,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -666,7 +666,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 105,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -675,7 +675,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 106,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -684,7 +684,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 107,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -693,7 +693,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 108,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -909,7 +909,7 @@
        "121 2019-01-02  "
       ]
      },
-     "execution_count": 108,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -920,7 +920,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 109,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -1106,7 +1106,7 @@
        "max                          1.0  1.955000e+06  "
       ]
      },
-     "execution_count": 109,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1117,7 +1117,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 110,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -1303,7 +1303,7 @@
        "max                          1.0  1.955000e+06  "
       ]
      },
-     "execution_count": 110,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1314,7 +1314,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 111,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -1367,7 +1367,7 @@
        "    <tr>\n",
        "      <th>unique</th>\n",
        "      <td>5</td>\n",
-       "      <td>7</td>\n",
+       "      <td>6</td>\n",
        "      <td>1</td>\n",
        "      <td>2</td>\n",
        "      <td>13</td>\n",
@@ -1384,7 +1384,7 @@
        "      <td>01 ONE FAMILY DWELLINGS</td>\n",
        "      <td>1</td>\n",
        "      <td>A1</td>\n",
-       "      <td>57 CHESTNUT STREET</td>\n",
+       "      <td>125-27 LUCAS STREET</td>\n",
        "      <td>RP.</td>\n",
        "      <td>4,000</td>\n",
        "      <td>A1</td>\n",
@@ -1393,7 +1393,7 @@
        "    <tr>\n",
        "      <th>freq</th>\n",
        "      <td>1203</td>\n",
-       "      <td>2358</td>\n",
+       "      <td>2380</td>\n",
        "      <td>2505</td>\n",
        "      <td>2474</td>\n",
        "      <td>918</td>\n",
@@ -1436,19 +1436,19 @@
       "text/plain": [
        "       BOROUGH NEIGHBORHOOD  BUILDING_CLASS_CATEGORY TAX_CLASS_AT_PRESENT  \\\n",
        "count     2505         2505                     2505                 2505   \n",
-       "unique       5            7                        1                    2   \n",
+       "unique       5            6                        1                    2   \n",
        "top          4        OTHER  01 ONE FAMILY DWELLINGS                    1   \n",
-       "freq      1203         2358                     2505                 2474   \n",
+       "freq      1203         2380                     2505                 2474   \n",
        "first      NaN          NaN                      NaN                  NaN   \n",
        "last       NaN          NaN                      NaN                  NaN   \n",
        "\n",
-       "       BUILDING_CLASS_AT_PRESENT             ADDRESS APARTMENT_NUMBER  \\\n",
-       "count                       2505                2505                1   \n",
-       "unique                        13                2495                1   \n",
-       "top                           A1  57 CHESTNUT STREET              RP.   \n",
-       "freq                         918                   2                1   \n",
-       "first                        NaN                 NaN              NaN   \n",
-       "last                         NaN                 NaN              NaN   \n",
+       "       BUILDING_CLASS_AT_PRESENT              ADDRESS APARTMENT_NUMBER  \\\n",
+       "count                       2505                 2505                1   \n",
+       "unique                        13                 2495                1   \n",
+       "top                           A1  125-27 LUCAS STREET              RP.   \n",
+       "freq                         918                    2                1   \n",
+       "first                        NaN                  NaN              NaN   \n",
+       "last                         NaN                  NaN              NaN   \n",
        "\n",
        "       LAND_SQUARE_FEET BUILDING_CLASS_AT_TIME_OF_SALE            SALE_DATE  \n",
        "count              2505                           2505                 2505  \n",
@@ -1459,7 +1459,7 @@
        "last                NaN                            NaN  2019-03-30 00:00:00  "
       ]
      },
-     "execution_count": 111,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1470,7 +1470,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 112,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1479,7 +1479,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 113,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -1489,7 +1489,7 @@
        "      dtype=object)"
       ]
      },
-     "execution_count": 113,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1500,7 +1500,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 114,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -1520,7 +1520,7 @@
        "Name: BUILDING_CLASS_AT_TIME_OF_SALE, dtype: int64"
       ]
      },
-     "execution_count": 114,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1531,7 +1531,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 115,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -1552,7 +1552,7 @@
        "Name: SALE_PRICE, dtype: float64"
       ]
      },
-     "execution_count": 115,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1563,7 +1563,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 116,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -1764,7 +1764,7 @@
        "S1                               443141.00   757504.0  1175000.0  1870000.0  "
       ]
      },
-     "execution_count": 116,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1775,7 +1775,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 117,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1784,7 +1784,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 118,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -1793,7 +1793,7 @@
        "(2505, 21)"
       ]
      },
-     "execution_count": 118,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1804,7 +1804,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 119,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -1834,7 +1834,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 119,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1845,7 +1845,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 120,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1854,7 +1854,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 121,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
@@ -1863,7 +1863,7 @@
        "(2505, 19)"
       ]
      },
-     "execution_count": 121,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1874,7 +1874,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 122,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
@@ -1902,7 +1902,7 @@
        "dtype: object"
       ]
      },
-     "execution_count": 122,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1913,7 +1913,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 123,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
@@ -1926,7 +1926,7 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 123,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1941,7 +1941,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 124,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
@@ -1950,7 +1950,7 @@
        "(2505, 19)"
       ]
      },
-     "execution_count": 124,
+     "execution_count": 32,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1961,7 +1961,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 125,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1973,7 +1973,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 126,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
@@ -2114,7 +2114,7 @@
        "121      1920.0                          1                             A1  "
       ]
      },
-     "execution_count": 126,
+     "execution_count": 34,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2125,7 +2125,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 127,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2138,7 +2138,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 128,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
@@ -2394,7 +2394,7 @@
        "18549                                  0  "
       ]
      },
-     "execution_count": 128,
+     "execution_count": 36,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2405,7 +2405,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 129,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
@@ -2414,7 +2414,7 @@
        "(2505, 23)"
       ]
      },
-     "execution_count": 129,
+     "execution_count": 37,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2425,7 +2425,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 130,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [
     {
@@ -2453,7 +2453,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 130,
+     "execution_count": 38,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2464,7 +2464,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 131,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2473,7 +2473,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 132,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [
     {
@@ -2482,7 +2482,7 @@
        "23"
       ]
      },
-     "execution_count": 132,
+     "execution_count": 40,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2496,7 +2496,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 133,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [
     {
@@ -2520,7 +2520,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 137,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2543,7 +2543,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 138,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [
     {
@@ -2552,7 +2552,7 @@
        "((2505, 15), (603, 15))"
       ]
      },
-     "execution_count": 138,
+     "execution_count": 43,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2563,7 +2563,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 139,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [
     {
@@ -2584,7 +2584,7 @@
        "        0.0000e+00]])"
       ]
      },
-     "execution_count": 139,
+     "execution_count": 44,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2595,7 +2595,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 140,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [
     {
@@ -2606,7 +2606,7 @@
        "        True,  True,  True,  True,  True])"
       ]
      },
-     "execution_count": 140,
+     "execution_count": 45,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2619,7 +2619,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 141,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [
     {
@@ -2633,7 +2633,7 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 141,
+     "execution_count": 46,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2644,7 +2644,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 145,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [
     {
@@ -2727,7 +2727,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 151,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [
     {
@@ -2749,7 +2749,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 135,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2762,7 +2762,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 153,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [
     {
@@ -3041,7 +3041,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 136,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3050,7 +3050,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [],
    "source": [
