--- a/module4-logistic-regression/LS_DS_214_assignment.ipynb
+++ b/module4-logistic-regression/LS_DS_214_assignment.ipynb
@@ -2123,6 +2123,66 @@
       "metadata": {
         "id": "pv2xKrOJggnv",
         "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 68
+        },
+        "outputId": "0120187f-f13b-4a18-d0d5-e042f8df500f"
+      },
+      "source": [
+        "#determine the majority class\n",
+        "target = \"Great\"\n",
+        "y_train = df_train[target]\n",
+        "y_train.value_counts(normalize=True)"
+      ],
+      "execution_count": 26,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "False    0.590604\n",
+              "True     0.409396\n",
+              "Name: Great, dtype: float64"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 26
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "H3WBK0P1kkwH",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "#What if we guessed the majority class for every prediction?\n",
+        "majority_class = y_train.mode()['False']\n",
+        "y_pred_train = [majority_class]*len(y_train)"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "bZoqu2i9mFKM",
+        "colab_type": "text"
+      },
+      "source": [
+        "#Use scikit-learn for logistic regression."
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "gX4gIld7mLpD",
+        "colab_type": "code",
         "colab": {}
       },
       "source": [
@@ -2130,6 +2190,164 @@
       ],
       "execution_count": 0,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "JcUKSkjamMAR",
+        "colab_type": "text"
+      },
+      "source": [
+        "#Get your model's validation accuracy. (Multiple times if you try multiple iterations.)"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "30yr8BgFmWbc",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        ""
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "9xFt0a5cmaog",
+        "colab_type": "text"
+      },
+      "source": [
+        "#Get your model's test accuracy. (One time, at the end.)"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "vigo6wmymeMa",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        ""
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "m86yL4G1mead",
+        "colab_type": "text"
+      },
+      "source": [
+        "#Commit your notebook to your fork of the GitHub repo."
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "vyw9dX41mku3",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        ""
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "at5S9m_Umlh0",
+        "colab_type": "text"
+      },
+      "source": [
+        "#Stretch Goals"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "2ja9-j2pmwNy",
+        "colab_type": "text"
+      },
+      "source": [
+        "##Make exploratory visualizations."
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "1FRJE-bam8OH",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        ""
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "2gz82KrNm3XI",
+        "colab_type": "text"
+      },
+      "source": [
+        "##Do one-hot encoding."
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "_JKSQTeam_3t",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        ""
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "joVezmi5nAGD",
+        "colab_type": "text"
+      },
+      "source": [
+        "##Do feature scaling."
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "4VCdp97pnGPJ",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        ""
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "BvpjyoXLnGcH",
+        "colab_type": "text"
+      },
+      "source": [
+        "##Get and plot your coefficients."
+      ]
     }
   ]
 }
